--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div> <!-- divisão da página-->
 
              <h1>Extraordinário</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NwLppVUe9g4?si=Y1Q-Bn9kVNo7KTIf" title="YouTube video player" frameborder="0" allow="accelerometer; 
-            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bVGhvwiBztw" allowfullscreen></iframe>
             <p>Auggie Pullman é um garoto que nasceu com uma deformação facial, o que fez com que passasse por 27 cirurgias plásticas. Aos 10 anos, 
                  ele pela primeira vez frequentará uma escola regular,  como qualquer outra criança. Lá, precisa lidar com a sensação constante de ser 
                 sempre observado e avaliado por todos à sua volta</p>
