--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div> <!-- divisão da página-->
 
              <h1>Extraordinário</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bVGhvwiBztw" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/bVGhvwiBztw?si=rUcaxkweEz-vfGod" allowfullscreen></iframe>
             <p>Auggie Pullman é um garoto que nasceu com uma deformação facial, o que fez com que passasse por 27 cirurgias plásticas. Aos 10 anos, 
                  ele pela primeira vez frequentará uma escola regular,  como qualquer outra criança. Lá, precisa lidar com a sensação constante de ser 
                 sempre observado e avaliado por todos à sua volta</p>
